--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "1.0.1",
   "description": "A knex ORM modeled after Rails' ActiveRecord",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:alexiscash/knex-base.git"
-  },
-  "bugs": {
-    "url": "https://github.com/alexiscash/knex-base/issues"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +12,12 @@
     "base"
   ],
   "author": "Alexis Rangel",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexiscash/knex-base.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexiscash/knex-base/issues"
+  }
 }
