--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A knex ORM modeled after Rails' ActiveRecord",
   "main": "index.js",
   "scripts": {
-    "test": "cls && jest",
-    "dev": "node test/index.js"
+    "dev": "node test/index.js",
+    "test": "cls && jest"
   },
   "keywords": [
     "knex",
